manifests/base/network-policies/default/calico-network-policy-allow-egress-icmp.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-egress-icmp-calico
  namespace: default
spec:
  selector: app == 'blackbox-exporter'
  types:
    - Egress
  egress:
    - action: Allow
      destination:
        nets:
          - 10.0.1.1/32
          - 10.0.1.204/32
          - 8.8.8.8/32
      protocol: ICMP
